tests/neg/i2887b.check
-- Error: tests/neg/i2887b.scala:11:7 ----------------------------------------------------------------------------------
11 |    baz(new A { type S[X[_] <: [_] =>> Any, Y[_]] = [Z] =>> X[Z][Y[Z]]; type I[X] = X })(1) // error
   |       ^
   |Recursion limit exceeded.
   |Maybe there is an illegal cyclic reference?
   |If that's not the case, you could try to increase the fuel and stack size: https://docs.scala-lang.org/overviews/compiler-options/compiling-deeply-nested-code.html
   |For the unprocessed stack overflow trace, compile with -Xno-enrich-error-messages.
   |A recurring operation is (inner to outer):
   |
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  ...
   |
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
   |  try to instantiate Z[Z]
